formula one automation tests